fix custom bullets on mobile
possibly just for my phone? idk

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -262,6 +262,13 @@ s,
   margin-left: -1em;
 }
 
+@media (max-width: 768px) {
+  .todo:before {
+    margin-left: -1.33em;
+    margin-right: 0.33em;
+  }
+}
+
 .todo:before {
   color: #98E551;
 }
